# instadown

./: .gitignore  CONTEXT.md  LICENSE  README.md  pyproject.toml
android/: README.md  build.gradle.kts  build.sh  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/instadown/app/: CopyErrorReceiver.kt  DownloadWorker.kt  InstaDownApp.kt  LoginActivity.kt  MainActivity.kt  NotificationHelper.kt  PythonBridge.kt  SaveHelper.kt  SettingsActivity.kt  ShareActivity.kt  Theme.kt
android/app/src/main/python/: instadown_android.py
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml
docs/superpowers/plans/: 2026-06-08-background-download-sheet.md
docs/superpowers/specs/: 2026-06-08-background-download-sheet-design.md
src/instadown/: __init__.py  __main__.py  cli.py  downloader.py  fmt.py  web.py
tests/: test_downloader.py
web/: app.js  index.html  manifest.webmanifest  style.css  sw.js
