[project]
name = "instadown"
version = "0.1.0"
description = "Download Instagram posts, carousels, and reels at the highest available quality."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "gallery-dl>=1.30.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.scripts]
instadown = "instadown.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/instadown"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
